--- a/components/corespring/multiple-choice/src/client/styles.css
+++ b/components/corespring/multiple-choice/src/client/styles.css
@@ -196,7 +196,7 @@
 }
 
 .config-panel-body .check-correct-label {
-    float: right;
+    text-align: right;
     margin-bottom: 10px;
 }
 
